static/css/article.css
/* VARIABLE ASSIGNMENT */

#para_holder {
    position: absolute;
    width: 80%;
    left: 10%;
}

.para {
    position: relative;
    left: 20%;
    width: 60%;
    min-height: 30px;
    margin-bottom: 20px;
    padding-left: 5px;
    border-left: 2px solid var(--bg-col);
}

.para:hover {
/*     border-left: 2px solid var(--bor-col); */

}


.p_text {
    /* cursor: pointer; */
}

.p_input {
    width: 100%;
    min-height: 50px;
    font-size: 90%;
    overflow: hidden;
    display: none;
    border: none;
}

.para.changed {
    border-left: 2px solid var(--bor-foc-col);
}

.control {
    display: none;
    position: absolute;
    width: 15%;
    right: 100%;
    top: -15%;
    text-align: right;
    padding-right: 8px;
    font-size: var(--bg-font)
}

.para.editable > .control {
    display: block;
}

.controlButs {
        display: none;
}

.control:hover .controlButs {
    display: block;
}

.control:hover .controlDots {
    display: none;
}

.controlDots {
    color: black;
    font-size: 90%;
}

button {
    font-size:70%;
    padding:1px 3px;
    width: 100%;
    margin-top: 3px;
}

.active {
   border-left: 2px solid var(--hl-col);
}

.active.changed {
   border-left: 2px solid;
   border-image-source: linear-gradient(var(--hl-col) 0%, var(--hl-col) 50%, var(--bor-foc-col) 50%, var(--bor-foc-col));
   border-image-slice: 1;
}

.editable > .p_text {
    display: none;
}

.editable > .p_input {
    display: block;
}

/* DIV renderer stylying */

.eqnum {
    position: absolute;
    right: 10px;
    bottom: 40%;
}

#pop .eqnum {
    display: none;
}

.qed {
    position: absolute;
    right: 0;
    bottom:0%;
}

.title {
    font-size: 35px;
}

.env__heading_h1 {
    font-size: 30px;
}

.env__heading_h2 {
    font-size: 25px;
}

.env__heading_h3 {
    font-size: 20px;
}

.bib_heading {
    font-size: 30px;
}

.em {
    font-style: italic;
}

.list-item:before{
    content: "\2022\ ";
}

.list-item{
   text-indent: 15px;
}

.list{
    margin-top: 5px;
    margin-bottom: 5px;
}

.strong {
    font-weight: bold;
}

.theorem_header {
    font-weight: bold;
}

.proof_header {
    font-weight: bold;
}

.error_footer {
    color: var(--bor-foc-col);
    padding-top: 5px;
    padding-bottom: 5px;
}

.footnote {
    font-size: 90%;
    cursor: pointer;
}

#bib_block {
    display: none;
    position: relative;
    left: 20%;
    width: 60%;
    min-height: 30px;
    margin-bottom: 20px;
    padding-left: 5px;
    font-size: 70%;
}

#bib_block .cite {
    display: block;
}

.cite {
  margin-top: 15px;
  padding-left: 15px;
  text-indent: -15px;
}

.citekey {
    visibility: hidden;
    color: var(--hl-col);
}

.cite:hover .citekey {
    visibility: visible;
}

#pop {
    color: var(--pop-fg-col);
    background-color: var(--pop-bg-col);
    padding: 10px;
    position: absolute;
    z-index: 1000;
    min-width:150px;
    min-height:30px;
    max-width: 50%;
    border-radius: 5px;
    opacity: .95;
}

#pop .eqnum{
    display: none;
}

#pop:after {
	top: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-top-color: var(--pop-bg-col);
	border-width: 10px;
	margin-left: -10px;
}

.ref_error {
    border-radius: 3px;
    padding: 2px;
}

#toc{
    position: fixed;
    top: 5%;
    left: 20px;
    width: 23%;
    font-size: 80%;
    padding-top: 3%;
}

.toc_entry{
    visibility: hidden;
    display: block;
}

#toc:hover .toc_entry{
    visibility: visible;
}
#pop .heading {
    color: var(--hl-col)
}

